--- a/.github/workflows/auto-git-issue-actions.yml
+++ b/.github/workflows/auto-git-issue-actions.yml
@@ -5,8 +5,8 @@ run-name: ${{ github.actor }} is issueing for ToDoList GitHub Actions
 on:
 #   workflow_dispatch:
   schedule: 
-   - cron: "30 10 * * *"
-   - cron: "0 20 * * *"
+   - cron: "30 1 * * *"
+   - cron: "00 11 * * *"
 
 jobs:
   open-issue:
@@ -19,7 +19,7 @@ jobs:
         id: check-time
         run: |
           date
-          echo "::set-output name=hour::$(date -d '+9 hours' +'%H')"
+          echo "::set-output name=hour::$(date +'%H')"
       
       - name: Create Issue 
         if: ${{ steps.check-time.outputs.hour == '10' }}
