--- a/.github/workflows/auto-git-issue-actions.yml
+++ b/.github/workflows/auto-git-issue-actions.yml
@@ -51,6 +51,21 @@ jobs:
         with:
           github-token: ${{secrets.TOKEN}}
           script: |
+            const currentDate = new Date();
+            const korOffset = 9 * 60;
+            const currentKOR = new Date(currentDate.getTime() + korOffset * 60000);
+            const dayOfWeek = currentKOR.getDay();
+            if (dayOfWeek === 0) {
+              console.log("일요일입니다. 종료 합니다.");
+              return;
+            }
+            else if (dayOfWeek === 6) {
+              console.log("토요일입니다. 종료 합니다.");
+              return ;
+            }
+            else {
+              console.log("현재는 평일입니다!" + '\n' + "ToDo List issue 를 발행합니다.");
+            }
             const currentDate = new Date().toISOString().split('T')[0];
             const issueTitle = `${currentDate}-TODO`;
             const issueBody1 = `# 투두리스트 작성하는 법\n`;
@@ -75,6 +90,21 @@ jobs:
         with:
           github-token: ${{secrets.TOKEN}}
           script: |
+            const currentDate = new Date();
+            const korOffset = 9 * 60;
+            const currentKOR = new Date(currentDate.getTime() + korOffset * 60000);
+            const dayOfWeek = currentKOR.getDay();
+            if (dayOfWeek === 0) {
+              console.log("일요일입니다. 종료 합니다.");
+              return;
+            }
+            else if (dayOfWeek === 6) {
+              console.log("토요일입니다. 종료 합니다.");
+              return ;
+            }
+            else {
+              console.log("현재는 평일입니다!" + '\n' + "ToDo List issue 를 탐색 및 종료합니다.");
+            }
             const currentDate = new Date().toISOString().split('T')[0];
             const issueTitle = `${currentDate}-TODO`;
             const owner = "peer-42seoul";
