--- a/.github/workflows/auto-git-issue-actions.yml
+++ b/.github/workflows/auto-git-issue-actions.yml
@@ -3,10 +3,10 @@ name: auto-git-issue-actions
 run-name: ${{ github.actor }} is issueing for ToDoList GitHub Actions
 
 on:
-  workflow_dispatch:
-#  schedule: 
-#   - cron: "30 1 * * *"
-#   - cron: "00 11 * * *"
+#  workflow_dispatch:
+  schedule: 
+   - cron: "30 1 * * *"
+   - cron: "00 11 * * *"
 
 jobs:
   open-issue:
@@ -66,7 +66,8 @@ jobs:
             else {
               console.log("현재는 평일입니다!" + '\n' + "ToDo List issue 를 발행합니다.");
             }
-            const issueTitle = `${currentDate}-TODO`;
+            const date = currentDate.toISOString().split('T')[0];
+            const issueTitle = `${date}-TODO`;
             const issueBody1 = `# 투두리스트 작성하는 법\n`;
             const issueBody2 = `### (1) 아래 코멘트로 오늘 할 일 적기.\n`;
             const issueBody3 = `### (2) 저녁 8시 전까지 무슨 일을 하셨는지 체킹하기.\n`;
@@ -104,7 +105,8 @@ jobs:
             else {
               console.log("현재는 평일입니다!" + '\n' + "ToDo List issue 를 탐색 및 종료합니다.");
             }
-            const issueTitle = `${currentDate}-TODO`;
+            const date = currentDate.toISOString().split('T')[0];
+            const issueTitle = `${date}-TODO`;
             const owner = "peer-42seoul";
             const repo = "mangement-team-todo";
             const response = await github.rest.issues.listForRepo({
