--- a/.github/workflows/auto-git-issue-actions.yml
+++ b/.github/workflows/auto-git-issue-actions.yml
@@ -3,10 +3,10 @@ name: auto-git-issue-actions
 run-name: ${{ github.actor }} is issueing for ToDoList GitHub Actions
 
 on:
-#  workflow_dispatch:
-  schedule: 
-   - cron: "00 23 * * *"
-   - cron: "00 11 * * *"
+  workflow_dispatch:
+#  schedule: 
+#   - cron: "00 23 * * *"
+#   - cron: "00 11 * * *"
 
 jobs:
   open-issue:
