--- a/.github/workflows/auto-git-issue-actions.yml
+++ b/.github/workflows/auto-git-issue-actions.yml
@@ -45,7 +45,7 @@ jobs:
             }
 
       - name: Create Issue 
-        if: ${{ steps.check-time.outputs.hour == '10' }}
+#        if: ${{ steps.check-time.outputs.hour == '10' }}
         id: create_issue
         uses: actions/github-script@v6
         with:
