--- a/.github/workflows/auto-git-issue-actions.yml
+++ b/.github/workflows/auto-git-issue-actions.yml
@@ -63,9 +63,7 @@ jobs:
             }
             else 
               console.log("현재는 평일입니다!" + '\n' + "ToDo List issue 를 발행합니다.");
-            const currentDate = new Date();
-            currentDate.setHours(currentDate.getHours() + 9);
-            const date = currentDate.toISOString().split('T')[0];
+            const date = currentKOR.toISOString().split('T')[0];
             const issueTitle = `${date}-TODO`;
             const issueBody1 = `# 투두리스트 작성하는 법\n`;
             const issueBody2 = `### (1) 아래 코멘트로 오늘 할 일 적기.\n`;
