--- a/.github/workflows/auto-git-issue-actions.yml
+++ b/.github/workflows/auto-git-issue-actions.yml
@@ -70,72 +70,17 @@ jobs:
             const issueBody3 = `### (2) 저녁 8시 전까지 무슨 일을 하셨는지 체킹하기.\n`;
             const issueBody4 = `### 참고사항 본인의 작업 코드에 해당하는 이슈 링크 첨부 권장 (그 사람이 전체적인 작업 현황을 쉽게 볼 수 있으면 좋겠다는 의견)`;
             const issueBody5 = `
-            # 분류된 작업
-            
-            #### jujeon 
-            - 개인정보동의약관
-            - 모집글쓰기 작성 및 수정
-            - 히치하이킹
-            - 관리자페이지
-                
-            #### hoslim
-            - 팀설정페이지
-            - 검색
-            - PWA
-            
-            #### hyna
-            - 마이페이지, 프로필, 홈페이지설정
-            - 피어로그
-            
-            #### hujeong
-            - 회원가입
-            - 탈퇴
-            - 마이페이지 개인정보
-            
-            #### hyeokim2
-            - 메인페이지, 네비게이션바, 탭바
-            - 모집글 뷰
-            - DnD
-            
-            #### jeyoon
-            - 팀페이지 메인화면
-            - 쪽지
-            - 툭박스(위젯)
-            
-            #### woorikim
-            - 로그인
-            - 비밀번호 찾기
-            - 쇼케이스
-            
-            #### haryu
-            - 알림 (nest)
-            - 쪽지
-            - socket (온라인 여부 관리 등)
-            - Algorithm (개인성향 측정, 팀평가)
-            
-            #### jwee
-            - 게시판
-            - Algorithm (개인성향 측정, 팀평가)
-            - 피어로그
-            
-            #### hyeongki
-            - 사용자추적
-            - 고나리자
-            - 인공지능 입출력 (chatGPT)
-            
-            #### juhyelee
-            - 프로필
-            - 회원
-            - 피어로그
-            - 업적
-            
-            #### junssong
-            - 회원
-            - 팀 (팀페이지, 팀설정 등)
-            
-            #### wochae
-            - 알람 (스프링)
-            - 인공지능 입출력 (chatGPT)`;
+            ---
+            ### ToDo List 작성 예시 : 마크다운 표 작성 방식 참고할 것! 귀찮으면 긁어서 사용하시면 됩니다~
+            ```
+            |**시작 시간** | **종료 시간** | **제목** | **내용** |
+            |:---:|:---:|:---|:---|
+            |09:00|13:00|제목 작성|내용작성 |
+            // 요걸 잘 활용해서 내용을 적으면 아래처럼 표시가 됩니다 ~
+            ```
+            | **시작 시간** | **종료 시간** | **제목** | **내용** |
+            |:---:|:---:|:---|:---|
+            |09:00|13:00|제목 작성|내용작성 |`;
 
             const issueBody = issueBody1 + issueBody2 + issueBody3 + issueBody4 + issueBody5;
 
