--- a/.github/workflows/auto-git-issue-actions.yml
+++ b/.github/workflows/auto-git-issue-actions.yml
@@ -69,18 +69,18 @@ jobs:
             const issueBody2 = `### (1) 아래 코멘트로 오늘 할 일 적기.\n`;
             const issueBody3 = `### (2) 저녁 8시 전까지 무슨 일을 하셨는지 체킹하기.\n`;
             const issueBody4 = `### 참고사항 본인의 작업 코드에 해당하는 이슈 링크 첨부 권장 (그 사람이 전체적인 작업 현황을 쉽게 볼 수 있으면 좋겠다는 의견)`;
-            const issueBody5 = `
+            const issueBody5 = ```
             ---
             ### ToDo List 작성 예시 : 마크다운 표 작성 방식 참고할 것! 귀찮으면 긁어서 사용하시면 됩니다~
-            ```
-            | 시작 시간 | 종료 시간 | 제목 | 내용 |
+            \\`\\`\\`
+            | \\*\\*시작 시간\\*\\* | \\*\\*종료 시간\\*\\* | \\*\\*제목\\*\\ | \\*\\*내용\\*\\* |
             |:---:|:---:|:---|:---|
             |09:00|13:00|제목 작성|내용작성 |
             // 요걸 잘 활용해서 내용을 적으면 아래처럼 표시가 됩니다 ~
-            ```
-            | 시작 시간 | 종료 시간 | 제목 | 내용 |
+            \\`\\`\\`
+            | \\*\\*시작 시간\\*\\* | \\*\\*종료 시간\\*\\* | \\*\\*제목\\*\\* | \\*\\*내용\\*\\* |
             |:---:|:---:|:---|:---|
-            |09:00|13:00|제목 작성|내용작성 |`;
+            |09:00|13:00|제목 작성|내용작성 |```;
 
             const issueBody = issueBody1 + issueBody2 + issueBody3 + issueBody4 + issueBody5;
 
