--- a/.github/workflows/auto-issue-close-actions.yml
+++ b/.github/workflows/auto-issue-close-actions.yml
@@ -4,8 +4,8 @@ run-name: ${{ github.actor }} is issueing for ToDoList GitHub Actions
 
 on:
   workflow_dispatch:
-  schedule: 
-   - cron: "00 13 * * *"
+  # schedule: 
+   # - cron: "00 13 * * *"
 
 jobs:
   open-issue:
